@@ -22,7 +22,7 @@ auto-checkout = *
 # Not released on pypi
 django-extended-choices = git https://github.com/twidi/django-extended-choices.git rev=828e88ca8dfdcdfd4c66c0bef537cb35914d8f7b
 # Still under development
-mapentity = git https://github.com/makinacorpus/Geotrek.git rev=859b6078d6e541004775a8e438c896ddd328e875
+mapentity = git https://github.com/makinacorpus/Geotrek.git rev=000c5fdadf1f988d7db050fb0ab62111ac8db825
 paperclip = git https://github.com/makinacorpus/Geotrek.git rev=0d85faa1fcb573ae95e184d6a079fbba24839b4b
 django-leaflet = git https://github.com/makinacorpus/django-leaflet.git rev=3772962f969d3203d4290165adf6b6dfac71f26f
 django-geojson = git https://github.com/makinacorpus/django-geojson.git rev=66093d737886d725b5fcd8d07a872995d9059be6
